syntax = "proto3";

option go_package = "github.com/LumeraProtocol/supernode/gen/supernode/supernode";

package supernode;

// this proto defines GRPC methods that SN uses to talk to another SNs during Cascade Registration

service CascadeService {
  // Session informs primary supernode about its `nodeID` and `sessID` it wants to connect to.
  // The stream is used by the parties to inform each other about the cancellation of the task.
  rpc Session(stream SessionRequest) returns (stream SessionReply);

  // SendSenseTicketSignature send signature from supernodes mn2/mn3 for given reg NFT session id to primary supernode
  rpc SendCascadeTicketSignature(SendTicketSignatureRequest) returns (SendTicketSignatureReply);
}

message SessionRequest {
  string nodeID = 1;
}

message SessionReply {
  string sessID = 1;
}

message SendTicketSignatureRequest {
  string nodeID = 1;
  bytes signature = 2;
  bytes data = 3;
  bytes rqFile = 4;
  EncoderParameters rqEncodeParams = 5;
}

message SendTicketSignatureReply {}

message EncoderParameters {
  bytes Oti = 1;
}
